# semantictool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.example.yml  pyproject.toml
.github/workflows/: docker.yml
src/semantictool/: __init__.py  lifespan.py  main.py  telemetry.py  toolhost.py
src/semantictool/config/: models.py
src/semantictool/routes/: __init__.py  main.py  models.py  servers.py  tools.py
src/semantictool/semantic/: clusters.py  embedder.py  model.py  store.py
